# connect4

./: .gitignore  CMakeLists.txt  board.c  board.h  log.c  log.h  main.c  solver.c  solver.h
